# apps/api/openapi.yaml
@@ -2118,6 +2118,9 @@ components:
           type: string
         authorId:
           type: string
+        authorProfileId:
+          type: string
+          format: uuid
         createdAt:
           type: string
           format: date-time
@@ -2223,6 +2226,9 @@ components:
           type: string
         authorId:
           type: string
+        authorProfileId:
+          type: string
+          format: uuid
         createdAt:
           type: string
           format: date-time
@@ -2715,6 +2721,15 @@ components:
       properties:
         userId:
           type: string
+        id:
+          type: string
+          format: uuid
+        email:
+          type: string
+          format: email
+        createdAt:
+          type: string
+          format: date-time
         role:
           $ref: "#/components/schemas/UserRole"
         displayName:
@@ -2895,6 +2910,9 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/SubjectSummary"
+        createdAt:
+          type: string
+          format: date-time
         stats:
           type: object
           required: [postsCount, responsesCount]
